test/error/E14.chigfn
{
	"type": "function",
	"name": "helloworld",
	"description": "Prints Hello World",
	"data_inputs": [],
	"data_outputs": [],
	"exec_inputs": [""],
	"exec_outputs": [""],
	"nodes": {
		"d9907330-5101-419e-90f0-d9cf9c32cdce": {
			"type": "lang:if",
			"data": {},
			"location": [2, 2]
		}
	},
	"connections": [
		{
			"type": {}
		}
	],
	"local_variables": {}
}
